DEVELOP: Added AWS S3 file upload functionality (NOTEST)